1.1 (#1)
* "enum" support for all types
"format" support for string type
long type support for "maximum" and "minimum" on integer type
"allOf" support
"oneOf" support
"anyOf" support

* updated build, wrapped up test coverage

* updated build