@@ -65,8 +65,53 @@ jacocoTestReport {
   }
 }
 
+compileJava {
+  inputs.property("moduleName", config.module.name)
+  doFirst {
+    options.compilerArgs = [
+      '--module-path', classpath.asPath,
+    ]
+    classpath = files()
+  }
+}
+
+compileTestJava {
+  inputs.property("moduleName", config.module.name)
+  doFirst {
+    options.compilerArgs = [
+      '--module-path', classpath.asPath,
+      '--add-modules', 'org.junit.jupiter.api',
+      '--add-reads', "${config.module.name}=org.junit.jupiter.api",
+      '--patch-module', "${config.module.name}=" + files(sourceSets.test.java.srcDirs).asPath,
+    ]
+    classpath = files()
+  }
+}
+
+test {
+  inputs.property("moduleName", config.module.name)
+  doFirst {
+    jvmArgs = [
+      '--module-path', classpath.asPath,
+      '--add-modules', 'ALL-MODULE-PATH',
+      '--add-reads', "${config.module.name}=org.junit.jupiter.api",
+      '--add-reads', "${config.module.name}=org.junit.platform.commons",
+      '--add-opens', "${config.module.name}/io.vulpine.lib.json.schema.v4.impl=org.junit.platform.commons",
+      '--add-opens', "${config.module.name}/io.vulpine.lib.json.schema.v4=org.junit.platform.commons",
+      '--patch-module', "${config.module.name}=" + files(sourceSets.test.java.outputDir).asPath,
+    ]
+    classpath = files()
+  }
+}
+
+javadoc {
+  inputs.property('moduleName', config.module.name)
+  doFirst {
+    options.addStringOption('-module-path', classpath.asPath)
+  }
+}
+
 artifacts {
-//  archives jar
   archives sourceJar
   archives javadocJar
 }
